Mon Mar 28 20:48:40 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression/Bug_3068_Regression.mpc:

          Added "after" statement to enable correct parallel builds.

Mon Mar 28 11:43:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Kokyu_dsrt_schedulers/fp_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/fp_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/mif_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/mif_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/muf_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/muf_example/server.cpp:
        * orbsvcs/tests/Notify/lib/Driver.h:
        * tests/Bug_2494_Regression/server.cpp:
        * tests/Bug_3531_Regression/client.cpp:
        * tests/Bug_3531_Regression/server.cpp:
        * tests/Bug_3567_Regression/client.cpp:
        * tests/Bug_3567_Regression/server.cpp:
        * tests/File_IO/server.cpp:
        * tests/MT_Server/server.cpp:
        * tests/Muxed_GIOP_Versions/server.cpp:
          Doxygen changes

Mon Mar 28 11:28:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/LifeCycle_Service/LifeCycle_Service.cpp:
        * orbsvcs/LifeCycle_Service/LifeCycle_Service_i.cpp:
        * orbsvcs/orbsvcs/Trader/Constraint_l.cpp:
        * orbsvcs/tests/Concurrency/CC_client.cpp:
        * orbsvcs/tests/Concurrency/CC_tests.cpp:
        * orbsvcs/tests/HTIOP/AMI/client.cpp:
        * orbsvcs/tests/tests_svc_loader/tests_svc_loader.cpp:
        * tests/AMI_Timeouts/timeout_i.cpp:
        * tests/CodeSets/libs/IBM1047_ISO8859/Wchar_IBM1047_ISO8859_Factory.h:
        * tests/CodeSets/simple/server.cpp:
        * tests/NestedUpcall/Triangle_Test/Initiator_i.cpp:
        * tests/OctetSeq/OctetSeq.cpp:
        * tests/Param_Test/multdim_array.cpp:
          Fuzz fixes

Mon Mar 28 11:21:51 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/AMI/FL_Callback/peer.cpp: